H2, transações e sessão JPA, seed e DTO