@@ -1,11 +1,13 @@
 package com.formacaospring.dscatalog.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.formacaospring.dscatalog.dto.CategoryDTO;
 import com.formacaospring.dscatalog.entities.Category;
 import com.formacaospring.dscatalog.repositories.CategoryRepository;
 
@@ -15,9 +17,9 @@ public class CategoryService {
 	@Autowired
 	private CategoryRepository repository;
 	
-	@Transactional
-	public List<Category> findAll(){
-		List<Category> result = repository.findAll();
-		return result.stream().map(x -> new Category(x)).toList();
+	@Transactional(readOnly = true)
+	public List<CategoryDTO> findAll(){
+		List<Category> list = repository.findAll();
+		return list.stream().map(x -> new CategoryDTO(x)).collect(Collectors.toList());
 	}
 }
